# pyfv3lm

./: .gitignore  CMakeLists.txt
cmake/: pyfv3lm_compiler_flags.cmake
src/: CMakeLists.txt
src/fv3jedilm_python_api/: .f2py_f2cmap_default_real_is_double  CMakeLists.txt  generate_wrappers.py
src/fv3jedilm_python_api/fv3jedilm_copy/: fv_arrays_nlm.F90  fv_grid_utils_nlm.F90  mpp_domains.F90
src/fv3jedilm_python_api/fv3jedilm_copy/include/: fms_platform.h
src/py_mpp/example/: update_domain.py
src/py_mpp/src/: CMakeLists.txt
src/py_mpp/src/mpp_ops/: interface_utils.f90  mpp_ops.f90
src/py_mpp/src/py_mpp_common/: parameters.py
src/py_mpp/src/py_mpp_jax/: __init__.py  effect.py  hashable.py  jax_mpp_ops.cpp  primitives.py
src/py_mpp/src/py_mpp_numpy/: .f2py_f2cmap_default_real_is_double  __init__.py  hashable.py  primitives.py
src/pyfv3lm/: README.md  array.py  constants.py  dynamics.py  field_manager.py  grid.py  grid_utils.py  json_utils.py  mpp.py  nesting.py  numpy_transforms.py  regional.py  settings.py  state.py  tracer_manager.py  transforms.py
src/pyfv3lm/tests/approval/: test_cubed_to_latlon.py
src/pyfv3lm_c_api/: CMakeLists.txt  build_pyfv3lm_c_api.py  c_api.h  module.py
src/pyfv3lm_fortran_api/: CMakeLists.txt  pyfv3lm_fv3jedilm_mock_mod.F90  pyfv3lm_mod.F90
